k8s/site.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: debian
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: debian
    strategy: {}
    template:
      metadata:
        labels:
          deployment: debian
      spec:
        containers:
        - image: ' '
          name: debian
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: debian
      app.kubernetes.io/component: debian
      app.kubernetes.io/instance: debian
    name: debian
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: debian
  status:
    loadBalancer: {}
kind: List
metadata: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: debian
spec:
  host: debian-debian.apps-crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: debian
    weight: 100
  wildcardPolicy: None
status: {}
